--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 255796196034.dkr.ecr.ap-south-1.amazonaws.com/demo
+        image: 767397913675.dkr.ecr.ap-southeast-1.amazonaws.com/myecrrepo
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
